--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,8 @@ sitemap: false
 robots: false
 permalink: /404.html
 headline: 404. Whoa! There's nothing here?!
-peep-image: /assets/img/john-cameron-zxsab1OdEsU-unsplash.jpg
+peep-image: /assets/uploads/john-cameron-zxsab1OdEsU-unsplash.jpg
+peep_image_nfresize: smartcrop
 ---
 
 Well thats a shame... Why not head over to the [home page](/) and see if you can find what you're looking for there.
